# syscall-ebpf-demo-rs

./: Cargo.toml  Makefile  flake.nix
kernel-space/: Cargo.toml
kernel-space/src/: main.rs
syscall_ebpf/: Cargo.toml
syscall_ebpf-ebpf/: Cargo.toml
syscall_ebpf-ebpf/.cargo/: config.toml
syscall_ebpf-ebpf/src/: main.rs
syscall_ebpf/src/: main.rs
user-space/: Cargo.toml
user-space/src/: main.rs
