[workspace]
resolver = "2"
members = ["kernel-space", "user-space"]

[workspace.package]
license = "MIT"
edition = "2024"

[workspace.dependencies]
aya = { version = "0.13", default-features = false }
aya-build = { version = "0.1", default-features = false }
aya-ebpf = { version = "0.1", default-features = false }
aya-log = { version = "0.2", default-features = false }
aya-log-ebpf = { version = "0.1", default-features = false }
anyhow = { version = "1", default-features = false }
env_logger = { version = "0.11", default-features = false }
log = { version = "0.4", default-features = false }
tokio = { version = "1.40", default-features = false }

# libc = { version = "0.2.159", default-features = false }
