[package]
name = "user-space"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
aya.workspace = true
log.workspace = true
anyhow.workspace = true
aya-log.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = [
  "time",
  "macros",
  "rt",
  "rt-multi-thread",
  "net",
  "signal",
] }
